// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/layout/Version renders correctly with latest version 1`] = `
.glamor-7 {
  color: #f44336;
}

.glamor-1 {
  margin: 0px;
}

<div
  className="glamor-6 glamor-7"
>
  <p
    className="glamor-0 glamor-1"
  >
    Version Info
  </p>
  <p
    className="glamor-0 glamor-1"
  >
    Flexget: 
    2.10.60
     
     
  </p>
  <p
    className="glamor-0 glamor-1"
  >
    API: 
    1.1.2
  </p>
</div>
`;

exports[`components/layout/Version renders correctly without latest version 1`] = `
.glamor-2 {
  color: #f44336;
}

.glamor-1 {
  margin: 0px;
}

<div
  className="glamor-7 glamor-2"
>
  <p
    className="glamor-0 glamor-1"
  >
    Version Info
  </p>
  <p
    className="glamor-0 glamor-1"
  >
    Flexget: 
    2.10.11
     
    <a
      className="MuiButtonBase-root-10 MuiIconButton-root-1"
      href="https://flexget.com/ChangeLog"
      onBlur={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchStart={[Function]}
      tabIndex="0"
    >
      <span
        className="MuiIconButton-label-7"
      >
        <span
          aria-hidden="true"
          className="material-icons MuiIcon-root-12 MuiIconButton-icon-8 fa fa-question-circle-o glamor-2"
        />
      </span>
      <span
        className="MuiTouchRipple-root-19"
      />
    </a>
     
  </p>
  <p
    className="glamor-0 glamor-1"
  >
    API: 
    1.1.2
  </p>
</div>
`;
